cmake_minimum_required(VERSION 3.12)
project(datastruct20181016)

set(CMAKE_CXX_STANDARD 98)

add_executable(main main.cpp)
add_executable(construct construct.cpp)
add_executable(height height.cpp)
add_executable(midrangeandlastrange midrangeandlastrange.cpp)
add_executable(traverse traverse.cpp)
add_executable(parentchild parentchild.cpp)
add_executable(count count.cpp)