set(CMAKE_CXX_STANDARD 98)

add_executable(BINARY search-binary.cpp)
add_executable(INDEX search-with-index.cpp)
add_executable(BLOCK search-with-index-block.cpp)
add_executable(INDEX_SEARCH search-with-index-search.cpp)
add_executable(INDEX_REMOVE search-with-index-remove.cpp)
add_executable(SEQUENCE search-sequence.cpp)